[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "algorithms"
version = "0.0.1"
description = "A collection of algorithms"
readme = "README.md"
requires-python = ">=3.13"

dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "ruff"
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:invalid escape sequence:SyntaxWarning"
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
# E741: do not use variables named 'l', 'O', or 'I'
# PERF401 Use a list comprehension to create a transformed list
# RET505: Unnecessary `elif` after `return` statement
# RUF002: Docstring contains ambiguous `ν`
# RUF003: Docstring contains ambiguous `ν`
# S101: Use of `assert` detected
# T201: `print` found
# W605: invalid escape sequence '\ '
ignore = ["E741", "PERF401", "RET505", "RUF002", "RUF003", "S101", "T201", "W605"]
